[gd_scene load_steps=2 format=3 uid="uid://bdh6hvinlj0v7"]

[ext_resource type="Script" path="res://UI/missions_window.gd" id="1_dehfn"]

[node name="MissionsWindow" type="Window"]
initial_position = 2
size = Vector2i(512, 512)
script = ExtResource("1_dehfn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Caption" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="AvailableMissionsList" type="ItemList" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AcceptButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Accept"

[node name="AcceptedMissionsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Accepted missions"

[node name="AcceptedMissionsList" type="ItemList" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="DeliverButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Deliver"

[connection signal="pressed" from="VBoxContainer/AcceptButton" to="." method="_on_accept_button_pressed"]
[connection signal="pressed" from="VBoxContainer/DeliverButton" to="." method="_on_deliver_button_pressed"]
